[Task][66485] Init API

--- a/app/src/main/res/layout/item_intro_slide.xml
+++ b/app/src/main/res/layout/item_intro_slide.xml
@@ -26,8 +26,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="@+id/img_background"
         app:layout_constraintVertical_bias="0.1"
-        tools:layout_editor_absoluteX="0dp"
-        tools:ignore="UseCompoundDrawables">
+        tools:ignore="UseCompoundDrawables"
+        tools:layout_editor_absoluteX="0dp">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -38,8 +38,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/logo_description"
             android:layout_marginTop="@dimen/dp_12"
+            android:text="@string/logo_description"
             android:textColor="@color/white"
             android:textSize="@dimen/sp_20"
             android:textStyle="bold" />
@@ -48,14 +48,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/dp_60"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="@+id/img_background"
         app:layout_constraintVertical_bias="0.45"
-        tools:layout_editor_absoluteX="0dp"
-        android:layout_marginHorizontal="@dimen/dp_60"
-        tools:ignore="UseCompoundDrawables">
+        tools:ignore="UseCompoundDrawables"
+        tools:layout_editor_absoluteX="0dp">
 
         <TextView
             android:id="@+id/tv_slogan_1"
@@ -75,9 +75,9 @@
             android:id="@+id/tv_slogan_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_20"
             android:text="@string/slogan_content_1"
             android:textAlignment="center"
-            android:layout_marginTop="@dimen/dp_20"
             android:textColor="@color/white"
             android:textSize="@dimen/sp_16" />
     </LinearLayout>
