[Task][66491] Fetch and display data on Home Screen

--- a/app/src/main/res/layout/item_recipe.xml
+++ b/app/src/main/res/layout/item_recipe.xml
@@ -11,7 +11,7 @@
         android:layout_height="@dimen/dp_370"
         android:layout_marginEnd="@dimen/dp_6"
         android:layout_marginBottom="@dimen/dp_10"
-        app:cardBackgroundColor="@color/yellow"
+        app:cardBackgroundColor="@color/light_yellow"
         app:cardCornerRadius="@dimen/dp_20"
         app:cardElevation="@dimen/dp_6"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -35,6 +35,7 @@
                 android:layout_gravity="center"
                 android:layout_marginVertical="@dimen/dp_10"
                 android:src="@drawable/food_icon"
+                app:civ_border_color="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -47,6 +48,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="@string/classic_greek_salad"
+                android:layout_marginTop="@dimen/dp_30"
                 android:textAlignment="center"
                 android:textSize="@dimen/sp_16"
                 android:textStyle="bold"
@@ -60,6 +62,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
+                android:layout_marginTop="@dimen/dp_70"
                 android:src="@drawable/baseline_room_service_24"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -73,6 +76,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="28dp"
+                android:layout_marginTop="@dimen/dp_70"
                 android:layout_toEndOf="@id/img_serving"
                 android:text="@string/serving"
                 android:textSize="@dimen/sp_14"
@@ -89,6 +93,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
+                android:layout_marginTop="@dimen/dp_70"
                 android:text="@string/total_servings"
                 android:textSize="@dimen/sp_14"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -102,6 +107,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
+                android:layout_marginTop="@dimen/dp_70"
                 android:src="@drawable/baseline_thumb_up_24"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -114,15 +120,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
+                android:layout_marginStart="28dp"
+                android:layout_marginTop="@dimen/dp_70"
                 android:layout_toEndOf="@id/img_like"
                 android:text="@string/like"
                 android:textSize="@dimen/sp_14"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/img_like"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.614"
-                tools:ignore="RelativeOverlap"
-                tools:layout_editor_absoluteX="28dp" />
+                tools:ignore="RelativeOverlap" />
 
             <TextView
                 android:id="@+id/tv_number_like"
@@ -130,6 +138,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
+                android:layout_marginTop="@dimen/dp_70"
                 android:text="@string/total_likes"
                 android:textSize="@dimen/sp_14"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -143,6 +152,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
+                android:layout_marginTop="@dimen/dp_70"
                 android:src="@drawable/baseline_access_time_24"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -156,6 +166,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="28dp"
+                android:layout_marginTop="@dimen/dp_70"
                 android:layout_toEndOf="@id/img_time"
                 android:text="@string/time"
                 android:textSize="@dimen/sp_14"
@@ -172,6 +183,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
+                android:layout_marginTop="@dimen/dp_70"
                 android:text="@string/time_servings"
                 android:textSize="@dimen/sp_14"
                 app:layout_constraintBottom_toBottomOf="parent"
