--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="colorTextPrimary">#212121</color>
     <color name="colorTextSecondary">#757575</color>
     <color name="darkLayout">#99000000</color>
-    <color name="yellow">#fef1e1</color>
+    <color name="background_yellow">#FFF2E2</color>
+    <color name="light_yellow">#FCE7CD</color>
 </resources>
