--- a/app/src/main/res/layout/layout_search_home_child.xml
+++ b/app/src/main/res/layout/layout_search_home_child.xml
@@ -44,6 +44,7 @@
     </androidx.cardview.widget.CardView>
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_search"
         android:layout_width="@dimen/dp_70"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/dp_16"
