--- a/app/src/main/res/layout/item_recipe.xml
+++ b/app/src/main/res/layout/item_recipe.xml
@@ -204,6 +204,7 @@
                 android:insetBottom="@dimen/dp_0"
                 android:padding="@dimen/dp_0"
                 app:icon="@drawable/black_baseline_favorite_24"
+                app:iconTint="@color/black"
                 app:iconGravity="textStart"
                 app:iconPadding="@dimen/dp_0"
                 app:iconSize="@dimen/dp_18"
