--- a/app/src/main/res/layout/item_favourite_recipe.xml
+++ b/app/src/main/res/layout/item_favourite_recipe.xml
@@ -4,13 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/dp_270"
-    android:layout_marginHorizontal="@dimen/dp_20">
+    android:layout_marginHorizontal="@dimen/dp_20"
+    android:layout_marginTop="@dimen/dp_12"
+    android:layout_marginBottom="@dimen/dp_8">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="@dimen/dp_4"
         app:cardCornerRadius="@dimen/dp_20"
-        app:cardElevation="@dimen/dp_2">
+        app:cardElevation="@dimen/dp_3">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -50,7 +53,7 @@
 
                     <TextView
                         android:id="@+id/tv_title"
-                        android:layout_width="wrap_content"
+                        android:layout_width="@dimen/dp_300"
                         android:layout_height="wrap_content"
                         android:text="@string/indonesian_chiken_burger"
                         android:textColor="@color/white"
@@ -58,24 +61,24 @@
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.09"
+                        app:layout_constraintHorizontal_bias="0.225"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.757" />
+                        app:layout_constraintVertical_bias="0.576" />
 
                     <TextView
                         android:id="@+id/tv_dish_type"
-                        android:layout_width="wrap_content"
+                        android:layout_width="@dimen/dp_260"
                         android:layout_height="wrap_content"
                         android:text="@string/indonesian_chiken_burger"
                         android:textColor="@color/gray"
                         android:textSize="@dimen/sp_13"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.07"
+                        app:layout_constraintHorizontal_bias="0.144"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.912" />
+                        app:layout_constraintVertical_bias="0.868" />
 
                     <com.google.android.material.button.MaterialButton
                         android:id="@+id/btn_favourite"
@@ -95,10 +98,10 @@
                         app:iconTint="@color/black"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.952"
+                        app:layout_constraintHorizontal_bias="0.953"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.903"
+                        app:layout_constraintVertical_bias="0.908"
                         app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -174,6 +177,7 @@
                 tools:ignore="ContentDescription" />
 
             <TextView
+                android:id="@+id/tv_estimate_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/time_servings"
