--- a/app/src/main/res/layout/fragment_view_more_recipes.xml
+++ b/app/src/main/res/layout/fragment_view_more_recipes.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_view_more_recipes_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_yellow"
@@ -34,6 +35,7 @@
         app:layout_constraintVertical_bias="0.041" />
 
     <androidx.cardview.widget.CardView
+        android:backgroundTint="@color/light_yellow"
         android:id="@+id/card_view_container"
         android:layout_width="@dimen/dp_280"
         android:layout_height="@dimen/dp_40"
